--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="/assets/javascripts/app.js"></script>
+  <script src="/assets/app.js"></script>
   <script src="https://apis.google.com/js/platform.js"></script>
-  <link rel="stylesheet" href="/assets/stylesheets/main.css" />
+  <link rel="stylesheet" href="/assets/main.css" />
 </head>
 <body ng-app="CongressApp">
   <div ng-controller="MembersController as membersCtrl" ng-cloak>
