--- a/site/index.html
+++ b/site/index.html
@@ -9,25 +9,32 @@
   <div ng-controller="MembersController as membersCtrl" ng-cloak>
     <input id="search-box"
            ng-model="membersCtrl.currentSearch"
-           ng-model-options="{ debounce: 100 }"
            placeholder="Search for a member of congress"
            ng-class="membersCtrl.getSearchBoxClass()" />
 
     <ul id="member-list">
-      <li ng-repeat="member in membersCtrl.currentMembers">
-        {{member.person.firstname}}
-        {{member.person.lastname}}
+      <li class="congress-member" ng-repeat="member in membersCtrl.currentMembers">
+        <span class="congress-member__name">
+          {{member.person.firstname}} {{member.person.lastname}}
+        </span>
+
+        <span class="congress-member__title">
+          {{member.party}} {{member.title_long}}
+        </span>
         <button ng-click="membersCtrl.showMore(member)">
           More
         </button>
       </li>
     </ul>
 
-    <div class="more-box" ng-show="membersCtrl.current">
+    <div class="more-box" ng-if="membersCtrl.current">
       <h1>
         {{membersCtrl.current.person.firstname}}
         {{membersCtrl.current.person.lastname}}
       </h1>
+
+      <img src="https://www.govtrack.us/data/photos/{{membersCtrl.current.person.id}}-100px.jpeg"
+           width="100" />
 
       {{membersCtrl.current.party}}
       {{membersCtrl.current.title_long}}
