--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
   <script src="/assets/app.js"></script>
   <script src="https://apis.google.com/js/platform.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 
   <link rel="stylesheet" href="/assets/main.css" />
 </head>
