--- a/site/index.html
+++ b/site/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <base href="/">
 
-  <script src="/assets/app.js"></script>
   <script src="https://apis.google.com/js/platform.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 
-  <link rel="stylesheet" href="/assets/main.css" />
+  <script src="<%= htmlWebpackPlugin.files.js[0] %>"></script>
+  <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>">
 </head>
 <body ng-app="CongressApp">
   <div ng-view></div>
