--- a/site/index.html
+++ b/site/index.html
@@ -11,6 +11,10 @@
 
   <script src="<%= htmlWebpackPlugin.files.js[0] %>"></script>
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>">
+
+  <title>
+    Contact Congress | congress.gripe
+  </title>
 </head>
 <body ng-app="CongressApp">
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -18,7 +22,7 @@
       <div class="mdl-layout__header-row">
         <a href="/" class="mdl-layout-title">
           <i class="material-icons site-header__icon">account_balance</i>
-          Contact Congress
+          Contact a Congress Member
         </a>
       </div>
     </header>
