--- a/site/index.html
+++ b/site/index.html
@@ -20,9 +20,17 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header site-header"
             ng-show="siteCtrl.isHeaderVisible()">
-      <a href="/" class="mdl-layout-title site-header__text">
-        Congress.Gripe
-      </a>
+      <div class="mdl-layout__header-row site-header__row">
+        <h1 class="mdl-layout-title site-header__text">
+          <a href="/" class="site-header__text">
+            Congress.Gripe
+          </a>
+        </h1>
+
+        <h2 class="site-header__subtext">
+          Quickly find and contact a member of congress
+        </h2>
+      </div>
     </header>
 
     <main class="mdl-layout__content" ng-view autoscroll>
