--- a/site/index.html
+++ b/site/index.html
@@ -5,19 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <base href="/">
 
-  <script src="https://apis.google.com/js/platform.js"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-
-  <script src="<%= htmlWebpackPlugin.files.js[0] %>"></script>
-  <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>">
-
   <title>
     Contact Congress | congress.gripe
   </title>
 </head>
-<body ng-app="CongressApp" ng-controller="SiteController as siteCtrl" ng-cloak>
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+<body ng-app="CongressApp" ng-controller="SiteController as siteCtrl">
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" ng-cloak>
     <header class="mdl-layout__header site-header"
             ng-show="siteCtrl.isHeaderVisible()">
       <div class="mdl-layout__header-row site-header__row">
@@ -37,6 +30,13 @@
     </main>
   </div>
 </body>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+<link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>">
+
+<script src="<%= htmlWebpackPlugin.files.js[0] %>"></script>
+
+<script src="https://apis.google.com/js/platform.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
